[project]
name = "ntsb-intel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jasha Phillips", email = "jasha.k.phillips@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ntsb-intel = "ntsb_intel:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
